--- a/package.json
+++ b/package.json
@@ -9,22 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "typescript": "^5",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
+    "blockly": "^10.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "phaser": "^3.80.0",
-    "zod": "^3.22.4",
-    "blockly": "^10.2.2",
     "framer-motion": "^10.16.4",
-    "lucide-react": "^0.263.1"
+    "lucide-react": "^0.263.1",
+    "next": "14.2.5",
+    "phaser": "^3.80.0",
+    "playwright": "^1.55.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
