--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "lucide-react": "^0.263.1",
     "next": "14.2.5",
     "phaser": "^3.80.0",
+    "pixi-filters": "^6.1.4",
+    "pixi-sound": "^3.0.4",
+    "pixi.js": "^8.13.1",
     "playwright": "^1.55.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
